WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252940
Crash under PowerObserver::didReceiveSystemPowerNotification()
https://bugs.webkit.org/show_bug.cgi?id=252940
Summary
Crash under PowerObserver::didReceiveSystemPowerNotification()
Chris Dumez
Reported
2023-02-24 19:06:31 PST
Crash under PowerObserver::didReceiveSystemPowerNotification(): Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x7ff908816b0a ___ZN7WebCore13PowerObserver33didReceiveSystemPowerNotificationEjjPv_block_invoke + 10 (/usr/include/c++/v1/__memory/unique_ptr.h:287) 1 com.apple.CoreFoundation 0x7ff8070bc680 __CFRUNLOOP_IS_CALLING_OUT_TO_A_BLOCK__ + 10 (CFRunLoop.c:1820) 2 com.apple.CoreFoundation 0x7ff8070bc52c __CFRunLoopDoBlocks + 444 (CFRunLoop.c:1862) 3 com.apple.CoreFoundation 0x7ff8070bb89c __CFRunLoopRun + 2608 (CFRunLoop.c:3198)
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-02-24 19:07:29 PST
<
rdar://90891509
>
Chris Dumez
Comment 2
2023-02-24 19:09:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10677
EWS
Comment 3
2023-02-25 09:47:49 PST
Committed
260835@main
(624d3538fd22): <
https://commits.webkit.org/260835@main
> Reviewed commits have been landed. Closing PR #10677 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug