Cherry-pick 624d3538fd22. rdar://problem/90891509

Crash under PowerObserver::didReceiveSystemPowerNotification()
    https://bugs.webkit.org/show_bug.cgi?id=252940
    rdar://90891509

    Reviewed by David Kilzer.

    Make sure `this` is still alive when we execute the block on the main thread,
    before running m_powerOnHander.

    * Source/WebCore/platform/mac/PowerObserverMac.cpp:
    (WebCore::PowerObserver::didReceiveSystemPowerNotification):
    * Source/WebCore/platform/mac/PowerObserverMac.h:

    Canonical link: https://commits.webkit.org/260835@main

Canonical link: https://commits.webkit.org/259548.305@safari-7615-branch